--- a/dashboard/dashboard/Shared/NavMenu.razor
+++ b/dashboard/dashboard/Shared/NavMenu.razor
@@ -15,6 +15,16 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="thisyear">
+                <span class="oi oi-plus" aria-hidden="true"></span> This year (Graph)
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="lastsevendays">
+                <span class="oi oi-plus" aria-hidden="true"></span> Last 7 days (Graph)
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="thismonthtable">
                 <span class="oi oi-plus" aria-hidden="true"></span> This month (table)
             </NavLink>
