Adds date range razor page

--- a/dashboard/dashboard/Pages/ThisMonthTable.razor
+++ b/dashboard/dashboard/Pages/ThisMonthTable.razor
@@ -22,7 +22,7 @@ else {
                 <tr>
                     <td>@sensorRow.sensorName</td>
                     <td>@Math.Round(sensorRow.temperatureC, 2)</td>
-                    <td>@sensorRow.timestamp.ToString("HH:mm:ss")</td>
+                    <td>@sensorRow.timestamp.ToString("HH:mm:ss dd/MM/yyyy")</td>
                 </tr>
             }
         </tbody>
