--- a/dashboard/dashboard/Shared/NavMenu.razor
+++ b/dashboard/dashboard/Shared/NavMenu.razor
@@ -25,6 +25,11 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="daterange">
+                <span class="oi oi-plus" aria-hidden="true"></span> Date range (Graph)
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="thismonthtable">
                 <span class="oi oi-plus" aria-hidden="true"></span> This month (table)
             </NavLink>
