--- a/dashboard/dashboard/Pages/DateRange.razor
+++ b/dashboard/dashboard/Pages/DateRange.razor
@@ -2,9 +2,10 @@
 @inherits BaseDrawChart
 @using Plotly.Blazor.Traces
 @using Plotly.Blazor.LayoutLib
-@using dashboard.Data
 @using Plotly.Blazor.Traces.ScatterGlLib
-@inject TemperatureSensorDataService sensorService
+@using dashboard.Data
+@using mysqlefcore
+@inject SensorDataService<TempSensorController, tempCData> TempSensorService
 
 <div>
     <label for="start">Start date:</label>
@@ -35,7 +36,7 @@
 
     private async void UpdateChart() {
         if (startDate != default(DateTime) && endDate != default(DateTime)) {
-            sensorData = await sensorService.GetRecordsInRangeAsync(startDate, endDate);
+            sensorData = await TempSensorService.GetRecordsInRangeAsync(startDate, endDate);
             await base.OnInitializedAsync();
             if (chart != null && traces != null) {
                 #pragma warning disable CS4014, BL0005
