--- a/dashboard/dashboard/Pages/ThisMonthTableTemperature.razor
+++ b/dashboard/dashboard/Pages/ThisMonthTableTemperature.razor
@@ -1,4 +1,4 @@
-@page "/thismonthtable"
+@page "/thismonthtable-temperature"
 @using dashboard.Data
 @using mysqlefcore
 @inject SensorDataService<TempSensorController, tempCData> TempSensorService
