--- a/dashboard/dashboard/Shared/NavMenu.razor
+++ b/dashboard/dashboard/Shared/NavMenu.razor
@@ -11,27 +11,47 @@
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> This month (Graph)
+                <span class="oi oi-home" aria-hidden="true"></span> This month temps (Graph)
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="thisyear">
-                <span class="oi oi-plus" aria-hidden="true"></span> This year (Graph)
+            <NavLink class="nav-link" href="thismonth-humidity">
+                <span class="oi oi-plus" aria-hidden="true"></span> This month humidity (Graph)
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="lastsevendays">
-                <span class="oi oi-plus" aria-hidden="true"></span> Last 7 days (Graph)
+            <NavLink class="nav-link" href="thisyear-temperature">
+                <span class="oi oi-plus" aria-hidden="true"></span> This year temps (Graph)
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="daterange">
-                <span class="oi oi-plus" aria-hidden="true"></span> Date range (Graph)
+            <NavLink class="nav-link" href="thisyear-humidity">
+                <span class="oi oi-plus" aria-hidden="true"></span> This year humidity (Graph)
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="thismonthtable">
-                <span class="oi oi-plus" aria-hidden="true"></span> This month (table)
+            <NavLink class="nav-link" href="lastsevendays-temperature">
+                <span class="oi oi-plus" aria-hidden="true"></span> Last 7 days temps (Graph)
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="lastsevendays-humidity">
+                <span class="oi oi-plus" aria-hidden="true"></span> Last 7 days humidity (Graph)
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="daterange-temperature">
+                <span class="oi oi-plus" aria-hidden="true"></span> Date range temps (Graph)
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="daterange-humidity">
+                <span class="oi oi-plus" aria-hidden="true"></span> Date range humidity (Graph)
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="thismonthtable-temperature">
+                <span class="oi oi-plus" aria-hidden="true"></span> This month temps (Table)
             </NavLink>
         </div>
     </nav>
