--- a/dashboard/dashboard/Pages/LastSevenDaysHumidity.razor
+++ b/dashboard/dashboard/Pages/LastSevenDaysHumidity.razor
@@ -1,11 +1,11 @@
-@page "/thisyear"
-@inherits BaseDrawChart
+@page "/lastsevendays-humidity"
 @using Plotly.Blazor.Traces
 @using Plotly.Blazor.LayoutLib
 @using Plotly.Blazor.Traces.ScatterGlLib
 @using dashboard.Data
 @using mysqlefcore
-@inject SensorDataService<TempSensorController, tempCData> TempSensorService
+@inherits BaseDrawChart<mysqlefcore.humidityData>
+@inject SensorDataService<HumiditySensorController, humidityData> HumiditySensorService
 
 <div style="height:1000px;"><PlotlyChart @ref="chart" /></div>
 
@@ -14,13 +14,13 @@
     private PlotlyChart ?chart;
 
     protected override async Task OnInitializedAsync() {
-        sensorData = await TempSensorService.GetAllRecordsInYearAsync();
+        sensorData = await HumiditySensorService.GetLastSevenDaysAsync();
         await base.OnInitializedAsync();
         // Some copa pasta boiler plate due to the nature of the Plotly Chart. Might need more thought.
         if (chart != null && traces != null) {
             #pragma warning disable CS4014, BL0005
             chart.Layout = new Layout() {
-                Title = new Title() { Text = $"Temperature Sensor Data for {DateTime.Now.Year}" }
+                Title = new Title() { Text = $"Humidity Sensor Data for the last seven days." }
             };
             chart.Data = traces.Cast<ITrace>().ToList();
             chart.Update();
