--- a/dashboard/dashboard/Shared/MainLayout.razor.css
+++ b/dashboard/dashboard/Shared/MainLayout.razor.css
@@ -1,4 +1,5 @@
 .page {
+    background-color: #444242;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -13,7 +14,7 @@ main {
 }
 
 .top-row {
-    background-color: #f7f7f7;
+    background-color: #444242;
     border-bottom: 1px solid #d6d5d5;
     justify-content: flex-end;
     height: 3.5rem;
@@ -51,7 +52,7 @@ main {
     }
 
     .sidebar {
-        width: 250px;
+        width: 350px;
         height: 100vh;
         position: sticky;
         top: 0;
