--- a/dashboard/dashboard/Pages/ThisYearHumidity.razor
+++ b/dashboard/dashboard/Pages/ThisYearHumidity.razor
@@ -20,7 +20,7 @@
         if (chart != null && traces != null) {
             #pragma warning disable CS4014, BL0005
             chart.Layout = new Layout() {
-                Title = new Title() { Text = $"Temperature Sensor Data for {DateTime.Now.Year}" }
+                Title = new Title() { Text = $"Humidity Sensor Data for {DateTime.Now.Year}" }
             };
             chart.Data = traces.Cast<ITrace>().ToList();
             chart.Update();
